Made a nice looking personal site

--- a/CSSCV/index.html
+++ b/CSSCV/index.html
@@ -6,18 +6,62 @@
   <title>James Leakos</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
+</head>
 </head>
 
 <body>
   <div class="top-container">
+    <img src="images/cloud.png" alt="cloud-img" class="top-cloud">
     <h1>I'm James</h1>
-    <p>a programmer</p>
+    <h2 class = "subtitle">a <span style="font-weight: bold">pro</span>grammer</h2>
+    <img src="images/mountain.png" alt="mountain-img">
+    <img src="images/cloud.png" alt="cloud-img" class="bottom-cloud">
   </div>
+
+  <div class="profile-container">
+    <div class="profile">
+      <img class="profile-pic" src="images/profile.png" alt="profile-pic">
+      <h2>Hello.</h2>
+      <p class="white-text">I am a software developer and game designer. I live in Flagstaff AZ, and love to run, bike, and ski.
+      I volunteer on the local Search and Rescue team. </p>
+    </div>
+  </div>
+
   <div class="middle-container">
+    <div class="skills">
+      <h2 class="skill-title">My Skills.</h2>
+      <div class="skill-row clearfix">
+        <img class="web-dev-image" src="images/settings.png" alt="">
+        <h3>Web Dev</h3>
+        <p class="adjusted-width">I'm just getting started, so I'll work for cheap.</p>
+      </div>
+      <br>
+      <div class="skill-row clearfix">
+        <img class="game-dev-image" src="images/video-game.png" alt="">
+        <h3>Game Dev</h3>
+        <p class="adjusted-width">Dev of best-selling game ARTEMIS: GOD QUEEN OF THE HUNT. Working on Legends of Leakos, a digital CCG.</p>
+      </div>
+    </div>
+    <hr class="spacer">
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3 class="touch-text">For web dev, game dev, or to grab a drink.</h3>
+      <p class="adjusted-width touch-text"> Email is best - press the button below to get started.</p>
+      <a href="mailto:jamesleakos@email.com" class="contact-button">Contact Me</a>
 
+    </div>
   </div>
-  <div class="bottom-container">
 
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <br><br>
+    <p class="white-text copywrite">© James Leakos.</p>
   </div>
 
 </body>
