--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -28,7 +28,7 @@
 
   <section id="title">
 
-    <div class="container-fluid">
+    <div class="container-fluid title-container">
 
       <!-- Nav Bar -->
 
@@ -55,7 +55,7 @@
       <!-- Title -->
 
       <div class="row title-area">
-        <div class="col-lg-6">
+        <div class="col-lg-6 title-left">
           <h1 class="title-text">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i> Download</button>
           <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fa-brands fa-google-play"></i> Download</button>
@@ -74,14 +74,29 @@
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <div class="container-fluid">
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+      <div class="row features-area">
+        <div class="col-lg-4 feature">
+          <i class="fa-solid fa-circle-check features-icon"></i>
+          <h3 class="features-title">Easy to use.</h3>
+          <p class="features-text">So easy to use, even your dog could do it.</p>
+        </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+        <div class="col-lg-4 feature">
+          <i class="fa-solid fa-bullseye features-icon"></i>
+          <h3>Elite Clientele.</h3>
+          <p class="features-text">We have all the dogs, the greatest dogs.</p>
+        </div>
+
+        <div class="col-lg-4 feature">
+          <i class="fa-solid fa-heart features-icon"></i>
+          <h3>Guaranteed to work.</h3>
+          <p class="features-text">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+
+    </div>
 
   </section>
 
@@ -90,13 +105,26 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2>My dog used to be so lonely, but with TinDog's help, they've found the love of their life.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
 
   </section>
 
@@ -104,10 +132,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -119,30 +147,60 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row">
+      <div class="pricing-column col col-lg-4 col-md-6 col-sm-12">
+        <div class="card h-100">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="btn btn-outline-dark btn-lg w-100">Sign Up For Free</button>
+          </div>
+        </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      </div>
+      <div class="pricing-column col col-lg-4 col-md-6 col-sm-12">
+        <div class="card h-100">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="btn btn-dark btn-lg w-100">Sign Up</button>
+          </div>
+        </div>
 
+      </div>
+      <div class="pricing-column col col-lg-4 col-md-12 col-sm-12">
+        <div class="card h-100">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+          </div>
+          <div class="card-footer">
+            <button type="button" class="btn btn-dark btn-lg w-100">Sign Up</button>
+          </div>
+        </div>
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      </div>
+    </div>
 
   </section>
 
